# agent-skills

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-skill.md
.github/workflows/: validate.yml
docs/: authoring.md  compatibility.md
scripts/: install.ps1  install.sh  validate.py
skills/alvar-design-system/: SKILL.md
skills/alvar-design-system/references/: components.md  principles.md  setup.md  tokens.md
skills/alvar-design-system/scripts/: add_to_project.py  check_tokens.py  new_project.py
skills/ebitengine/: SKILL.md
skills/ebitengine/references/: api_cheatsheet.md  architecture_patterns.md  deployment_guide.md  ecosystem_tooling.md
skills/ebitengine/scripts/: build_wasm.ps1  build_wasm.sh  new_project.py  release.ps1  release.sh
skills/ebitengine/templates/: go.mod
skills/estonian-grammar/: ATTRIBUTION.md  SKILL.md
skills/estonian-grammar/references/: authoritative-sources.md  estonian-writing-guide.md  mcp-integration.md
skills/estonian-grammar/scripts/: check_estonian_text.py
skills/estonian-grammar/templates/: proofread-report.md  rewrite-brief.md
skills/raylib/: SKILL.md
skills/raylib/references/: api_cheatsheet.md  architecture_patterns.md  deployment_guide.md  ecosystem_libraries.md
skills/raylib/scripts/: build.ps1  build.sh  build_web.ps1  build_web.sh  cross_compile_go.ps1  cross_compile_go.sh  new_project.py
skills/raylib/templates/c/: CMakeLists.txt  Makefile  main.c
templates/: SKILL.md
(+37 files in other folders)
